Clean reupload of project without large files

--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -1,19 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "051e6084-4eaa-4acf-804f-f654f85540e7",
+   "cell_type": "markdown",
+   "id": "a20aebd7-060d-43d2-9d9b-b1ea68b819c9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#The cell below is reponsible for outputting a sample of our fully encodeded data. Its output consists of the original number\n",
-    "#of rows and columns of the kddcup data set as well as the number of rows and columns after our data reprocessing\n"
+    "# Project Introduction\n",
+    "This project aims to develop machine learning pipelines that aid in detecting network anomalies/attacks by creating a predictive model that distinguishes the “bad” connections from “good” connections. This is done through data preprocessing, implementation of\n",
+    "several machine learning algorithms, and comprehensive evaluation of said models.\n",
+    "\n",
+    "The cell below is reponsible for outputting a sample of our fully encodeded data. Its output consists of the original number\n",
+    "of rows and columns of the kddcup data set as well as the number of rows and columns after our data reprocessing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1eb0b42-9ef7-4b31-beef-bc7b4a66bf0e",
+   "metadata": {},
+   "source": [
+    "# Data Loading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ad705a83-8ff9-4e74-ba03-ba394ddf795b",
    "metadata": {},
    "outputs": [
@@ -21,7 +31,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of the dataset: (494021, 42)\n",
+      "Dataset before\n",
+      "Shape of the dataset: (494021, 42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Step 1: Define the column names (KDD dataset has 41 features + 1 label)\n",
+    "column_names = [\n",
+    "    \"duration\", \"protocol_type\", \"service\", \"flag\", \"src_bytes\", \"dst_bytes\", \"land\",\n",
+    "    \"wrong_fragment\", \"urgent\", \"hot\", \"num_failed_logins\", \"logged_in\", \"num_compromised\",\n",
+    "    \"root_shell\", \"su_attempted\", \"num_root\", \"num_file_creations\", \"num_shells\",\n",
+    "    \"num_access_files\", \"num_outbound_cmds\", \"is_host_login\", \"is_guest_login\", \"count\",\n",
+    "    \"srv_count\", \"serror_rate\", \"srv_serror_rate\", \"rerror_rate\", \"srv_rerror_rate\",\n",
+    "    \"same_srv_rate\", \"diff_srv_rate\", \"srv_diff_host_rate\", \"dst_host_count\",\n",
+    "    \"dst_host_srv_count\", \"dst_host_same_srv_rate\", \"dst_host_diff_srv_rate\",\n",
+    "    \"dst_host_same_src_port_rate\", \"dst_host_srv_diff_host_rate\",\n",
+    "    \"dst_host_serror_rate\", \"dst_host_srv_serror_rate\", \"dst_host_rerror_rate\",\n",
+    "    \"dst_host_srv_rerror_rate\", \"label\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Step 2: Load the gzipped CSV file\n",
+    "df = pd.read_csv(\"kddcup.data_10_percent.gz\", header=None, names=column_names)\n",
+    "print(\"Dataset before\")\n",
+    "print(\"Shape of the dataset:\", df.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cea4fdc-60d1-4d87-a9f0-621ff2f960d1",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing\n",
+    "In this step of the project we \n",
+    "1. Delete duplicates\n",
+    "2. Labeled 'attack' and 'normal' connections\n",
+    "3. Get rid of columns with no variance\n",
+    "4. Encoded categorical data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cf84b22c-8531-48e6-89a0-fdab44fa3454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "duplicates = df.T[df.T.duplicated()].index\n",
+    "df = df.drop(columns=duplicates)\n",
+    "\n",
+    "constant_cols = [col for col in df.columns if df[col].nunique() == 1]\n",
+    "df = df.drop(columns=constant_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "97c15697-6eca-4cc0-b1d2-e191e3a12983",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset after:\n",
       "Shape of the dataset: (145586, 52)\n"
      ]
     },
@@ -801,44 +880,13 @@
        "9    False    False    False    False     True    False  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Step 1: Define the column names (KDD dataset has 41 features + 1 label)\n",
-    "column_names = [\n",
-    "    \"duration\", \"protocol_type\", \"service\", \"flag\", \"src_bytes\", \"dst_bytes\", \"land\",\n",
-    "    \"wrong_fragment\", \"urgent\", \"hot\", \"num_failed_logins\", \"logged_in\", \"num_compromised\",\n",
-    "    \"root_shell\", \"su_attempted\", \"num_root\", \"num_file_creations\", \"num_shells\",\n",
-    "    \"num_access_files\", \"num_outbound_cmds\", \"is_host_login\", \"is_guest_login\", \"count\",\n",
-    "    \"srv_count\", \"serror_rate\", \"srv_serror_rate\", \"rerror_rate\", \"srv_rerror_rate\",\n",
-    "    \"same_srv_rate\", \"diff_srv_rate\", \"srv_diff_host_rate\", \"dst_host_count\",\n",
-    "    \"dst_host_srv_count\", \"dst_host_same_srv_rate\", \"dst_host_diff_srv_rate\",\n",
-    "    \"dst_host_same_src_port_rate\", \"dst_host_srv_diff_host_rate\",\n",
-    "    \"dst_host_serror_rate\", \"dst_host_srv_serror_rate\", \"dst_host_rerror_rate\",\n",
-    "    \"dst_host_srv_rerror_rate\", \"label\"\n",
-    "]\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Step 2: Load the gzipped CSV file\n",
-    "df = pd.read_csv(\"kddcup.data_10_percent.gz\", header=None, names=column_names)\n",
-    "print(\"Shape of the dataset:\", df.shape)\n",
-    "df = df.drop_duplicates()\n",
-    "\n",
-    "duplicates = df.T[df.T.duplicated()].index\n",
-    "df = df.drop(columns=duplicates)\n",
-    "\n",
-    "constant_cols = [col for col in df.columns if df[col].nunique() == 1]\n",
-    "df = df.drop(columns=constant_cols)\n",
-    "\n",
-    "\n",
-    "#label encoding set 0 for normal connections and 1 for bad connections\n",
-    "\n",
+    "#label encoding set 0 for normal connections and 1 for attack connections\n",
     "df['label'] = df['label'].apply(lambda x: 0 if x == 'normal.' else 1)\n",
     "\n",
     "\n",
@@ -851,7 +899,7 @@
     "\n",
     "\n",
     "\n",
-    "\n",
+    "print(\"Dataset after:\")\n",
     "print(\"Shape of the dataset:\", df.shape)\n",
     "\n",
     "\n",
@@ -859,37 +907,26 @@
     "pd.set_option('display.width', 0)           # Automatically adjust to window width\n",
     "\n",
     "#this will show everything\n",
-    "df.head(10)\n"
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ab1c196-0b5b-476d-8436-c861874439d0",
+   "metadata": {},
+   "source": [
+    "# Model Pipelines\n",
+    "Train/test split\n",
+    "\n",
+    "Define pipelines for SVM, KNN, Random Forest\n",
+    "\n",
+    "Fit each model and evaluate them"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c953a72-e792-4a58-b8a7-151798f71c27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2553c919-7cfc-4394-bb9d-a6eec4003ce0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2056842f-14dd-4c6c-ba35-7243f356537b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e0f1a31-fcc4-4a79-a7f2-127b120f2f33",
+   "id": "a25cc98a-d39b-44fc-9c29-c2a9ca04271d",
    "metadata": {},
    "outputs": [],
    "source": []
