Updated read_csv func

--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "ad705a83-8ff9-4e74-ba03-ba394ddf795b",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
     "\n",
     "\n",
     "# Step 2: Load the gzipped CSV file\n",
-    "df = pd.read_csv(\"kddcup.data_10_percent.gz\", header=None, names=column_names)\n",
+    "df = pd.read_csv(\"data/kddcup.data_10_percent.gz\", header=None, names=column_names)\n",
     "print(\"Dataset before\")\n",
     "print(\"Shape of the dataset:\", df.shape)\n",
     "\n"
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "cf84b22c-8531-48e6-89a0-fdab44fa3454",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "97c15697-6eca-4cc0-b1d2-e191e3a12983",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
        "9    False    False    False    False     True    False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
