Update CS549Project.ipynb with random forest code

--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "ad705a83-8ff9-4e74-ba03-ba394ddf795b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "cf84b22c-8531-48e6-89a0-fdab44fa3454",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "97c15697-6eca-4cc0-b1d2-e191e3a12983",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
        "9    False    False    False    False     True    False  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,12 +919,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "id": "a8f6fb89-861c-4b8b-9597-c4d8b3add1f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.9994962908691272\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code for model"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# Split features and labels\n",
+    "X = df.drop('label', axis=1)\n",
+    "y = df['label']\n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred))"
    ]
   },
   {
@@ -944,12 +970,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "ead75840-c403-4618-8216-812a7f7579c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     26431\n",
+      "           1       1.00      1.00      1.00     17245\n",
+      "\n",
+      "    accuracy                           1.00     43676\n",
+      "   macro avg       1.00      1.00      1.00     43676\n",
+      "weighted avg       1.00      1.00      1.00     43676\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code for eval"
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -1072,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
