Normalized data using minMaxScaler, data ready for svm and knn implementation

--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -997,6 +997,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a895a4bb-15a8-456d-b8fe-1ecc1f85b5aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalization Using MinMaxScaler "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "75c982f3-2380-4f24-be13-574ef3a9dded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0ab1c196-0b5b-476d-8436-c861874439d0",
    "metadata": {},
