--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "ad705a83-8ff9-4e74-ba03-ba394ddf795b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "cf84b22c-8531-48e6-89a0-fdab44fa3454",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "97c15697-6eca-4cc0-b1d2-e191e3a12983",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
        "9    False    False    False    False     True    False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "a8f6fb89-861c-4b8b-9597-c4d8b3add1f0",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "\n",
     "# Split features and labels\n",
     "X = df.drop('label', axis=1)\n",
@@ -948,9 +948,7 @@
     "rf.fit(X_train, y_train)\n",
     "\n",
     "# Make predictions\n",
-    "y_pred = rf.predict(X_test)\n",
-    "\n",
-    "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred))"
+    "y_pred = rf.predict(X_test)"
    ]
   },
   {
@@ -970,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "ead75840-c403-4618-8216-812a7f7579c6",
    "metadata": {},
    "outputs": [
@@ -978,6 +976,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Random Forest Accuracy: 0.9994962908691272\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[26422     9]\n",
+      " [   13 17232]]\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
@@ -993,12 +996,14 @@
     }
    ],
    "source": [
+    "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred))\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "a895a4bb-15a8-456d-b8fe-1ecc1f85b5aa",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "75c982f3-2380-4f24-be13-574ef3a9dded",
    "metadata": {},
    "outputs": [],
@@ -1033,12 +1038,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "a25cc98a-d39b-44fc-9c29-c2a9ca04271d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code for model"
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_model = SVC(kernel='rbf', C=1.0, gamma=1)\n",
+    "\n",
+    "svm_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred_svm = svm_model.predict(X_test_scaled)"
    ]
   },
   {
@@ -1058,12 +1069,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "2fad8fbf-dbea-404a-9140-d338754d8bf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM (RBF Kernel) Accuracy: 0.9983972891290411\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[26404    27]\n",
+      " [   43 17202]]\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     26431\n",
+      "           1       1.00      1.00      1.00     17245\n",
+      "\n",
+      "    accuracy                           1.00     43676\n",
+      "   macro avg       1.00      1.00      1.00     43676\n",
+      "weighted avg       1.00      1.00      1.00     43676\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# code for eval"
+    "print(\"SVM (RBF Kernel) Accuracy:\", accuracy_score(y_test, y_pred_svm))\n",
+    "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred_svm))\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_svm))"
    ]
   },
   {
