Updated analysis in CS549Project.ipynb

--- a/CS549Project.ipynb
+++ b/CS549Project.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ad705a83-8ff9-4e74-ba03-ba394ddf795b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "cf84b22c-8531-48e6-89a0-fdab44fa3454",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "97c15697-6eca-4cc0-b1d2-e191e3a12983",
    "metadata": {},
    "outputs": [
@@ -879,7 +879,7 @@
        "9    False    False    False    False     True    False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
     "pd.set_option('display.max_columns', None)  # Show all columns\n",
     "pd.set_option('display.width', 0)           # Automatically adjust to window width\n",
     "\n",
-    "#this will show everything\n",
+    "#this will show a sample of the KDDcup dataset\n",
     "df.head(10)"
    ]
   },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "a8f6fb89-861c-4b8b-9597-c4d8b3add1f0",
    "metadata": {},
    "outputs": [],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "ead75840-c403-4618-8216-812a7f7579c6",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
